--- a/Amadeus_GCS_SQL_ETL.ipynb
+++ b/Amadeus_GCS_SQL_ETL.ipynb
@@ -35,8 +35,8 @@
     "from amadeus import Client, Response\n",
     "\n",
     "amadeus = Client(\n",
-    "    client_id='AClI3Gj9OR2Rk4TMFoMlyQEkNuWuZhFZ',\n",
-    "    client_secret='9C9KXklynjzFF9bT'\n",
+    "    client_id='****************',\n",
+    "    client_secret='***********'\n",
     ")"
    ]
   },
